--- a/MusicPlay/MusicPlay/View/HomeView/Base.lproj/Main.storyboard
+++ b/MusicPlay/MusicPlay/View/HomeView/Base.lproj/Main.storyboard
@@ -20,9 +20,9 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="aof-C8-7Fq">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="moA-7B-LwR">
-                                    <size key="itemSize" width="128" height="128"/>
-                                    <size key="headerReferenceSize" width="414" height="296"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="moA-7B-LwR">
+                                    <size key="itemSize" width="180" height="240"/>
+                                    <size key="headerReferenceSize" width="50" height="296"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="20" minY="20" maxX="20" maxY="20"/>
                                 </collectionViewFlowLayout>
@@ -71,6 +71,7 @@
                                                         <constraint firstItem="7c9-Ek-eUy" firstAttribute="leading" secondItem="Ftz-Lm-hLZ" secondAttribute="leading" id="ca3-eG-ypI"/>
                                                         <constraint firstItem="7c9-Ek-eUy" firstAttribute="top" secondItem="Ftz-Lm-hLZ" secondAttribute="top" id="jN4-TY-ES1"/>
                                                         <constraint firstItem="LT2-rc-KAs" firstAttribute="leading" secondItem="Ftz-Lm-hLZ" secondAttribute="leading" id="nLH-XY-4Jz"/>
+                                                        <constraint firstItem="7c9-Ek-eUy" firstAttribute="leading" secondItem="LT2-rc-KAs" secondAttribute="leading" id="vhU-za-QGK"/>
                                                     </constraints>
                                                 </stackView>
                                             </subviews>
@@ -99,28 +100,37 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="B67-zo-Rhk">
+                                            <rect key="frame" x="20" y="76" width="374" height="200"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="200" id="MXZ-lQ-Vnz"/>
+                                            </constraints>
+                                        </imageView>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nnd-eQ-NjA">
+                                            <rect key="frame" x="20" y="76" width="374" height="200"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </view>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eHp-xF-wJi">
-                                            <rect key="frame" x="20" y="66" width="374" height="200"/>
-                                            <state key="normal" title="Button"/>
+                                            <rect key="frame" x="20" y="76" width="374" height="200"/>
                                             <connections>
                                                 <action selector="cardTapped:" destination="MrK-6x-488" eventType="touchUpInside" id="ygP-nA-qxM"/>
                                             </connections>
                                         </button>
-                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="lbq-4Z-t9Q">
-                                            <rect key="frame" x="30" y="198.5" width="175" height="62.5"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="lbq-4Z-t9Q">
+                                            <rect key="frame" x="30" y="212.5" width="175" height="53.5"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PLAY NOW" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tNR-OU-5m4">
                                                     <rect key="frame" x="0.0" y="0.0" width="75" height="17"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ho9-uU-9Qa">
-                                                    <rect key="frame" x="0.0" y="29" width="175" height="33.5"/>
+                                                    <rect key="frame" x="0.0" y="20" width="175" height="33.5"/>
                                                     <string key="text">PLAY NOW
 Today's pick is silo's album</string>
                                                     <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -132,31 +142,29 @@ Today's pick is silo's album</string>
                                                 <constraint firstAttribute="bottom" secondItem="ho9-uU-9Qa" secondAttribute="bottom" id="uHM-6X-sMb"/>
                                             </constraints>
                                         </stackView>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="B67-zo-Rhk">
-                                            <rect key="frame" x="20" y="66" width="374" height="200"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="200" id="MXZ-lQ-Vnz"/>
-                                            </constraints>
-                                        </imageView>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="play.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="j2d-P7-QaC">
-                                            <rect key="frame" x="349" y="226.5" width="35" height="34"/>
+                                            <rect key="frame" x="349" y="236.5" width="35" height="34"/>
                                             <color key="tintColor" systemColor="systemPinkColor"/>
                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="30"/>
                                         </imageView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="lbq-4Z-t9Q" firstAttribute="bottom" secondItem="B67-zo-Rhk" secondAttribute="bottom" constant="-5" id="0Cn-0T-V0N"/>
+                                        <constraint firstItem="lbq-4Z-t9Q" firstAttribute="bottom" secondItem="B67-zo-Rhk" secondAttribute="bottom" constant="-10" id="0Cn-0T-V0N"/>
+                                        <constraint firstItem="Nnd-eQ-NjA" firstAttribute="bottom" secondItem="B67-zo-Rhk" secondAttribute="bottom" id="CR2-Gp-cCo"/>
                                         <constraint firstItem="j2d-P7-QaC" firstAttribute="bottom" secondItem="B67-zo-Rhk" secondAttribute="bottom" constant="-5" id="Cay-3l-laW"/>
                                         <constraint firstAttribute="trailing" secondItem="B67-zo-Rhk" secondAttribute="trailing" constant="20" id="EtB-EC-Lfp"/>
                                         <constraint firstItem="lbq-4Z-t9Q" firstAttribute="leading" secondItem="B67-zo-Rhk" secondAttribute="leading" constant="10" id="HMU-zd-xMV"/>
                                         <constraint firstItem="Rv8-x1-bhw" firstAttribute="top" secondItem="MrK-6x-488" secondAttribute="top" constant="30" id="X7A-yC-9JK"/>
                                         <constraint firstItem="eHp-xF-wJi" firstAttribute="bottom" secondItem="B67-zo-Rhk" secondAttribute="bottom" id="aaD-YU-CXo"/>
                                         <constraint firstItem="eHp-xF-wJi" firstAttribute="leading" secondItem="B67-zo-Rhk" secondAttribute="leading" id="cE1-M9-zJD"/>
+                                        <constraint firstItem="Nnd-eQ-NjA" firstAttribute="trailing" secondItem="B67-zo-Rhk" secondAttribute="trailing" id="ddS-my-IhD"/>
                                         <constraint firstItem="j2d-P7-QaC" firstAttribute="trailing" secondItem="B67-zo-Rhk" secondAttribute="trailing" constant="-10" id="e6U-XR-rRE"/>
                                         <constraint firstItem="B67-zo-Rhk" firstAttribute="leading" secondItem="MrK-6x-488" secondAttribute="leading" constant="20" id="fVR-Ie-dmo"/>
                                         <constraint firstItem="j2d-P7-QaC" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="lbq-4Z-t9Q" secondAttribute="trailing" constant="15" id="fsO-XU-BIy"/>
-                                        <constraint firstItem="B67-zo-Rhk" firstAttribute="top" secondItem="Rv8-x1-bhw" secondAttribute="bottom" id="hXi-EJ-DZz"/>
+                                        <constraint firstItem="B67-zo-Rhk" firstAttribute="top" secondItem="Rv8-x1-bhw" secondAttribute="bottom" constant="10" id="hXi-EJ-DZz"/>
                                         <constraint firstItem="eHp-xF-wJi" firstAttribute="top" secondItem="B67-zo-Rhk" secondAttribute="top" id="nG0-HQ-g9L"/>
+                                        <constraint firstItem="Nnd-eQ-NjA" firstAttribute="top" secondItem="B67-zo-Rhk" secondAttribute="top" id="opT-sl-HyK"/>
+                                        <constraint firstItem="Nnd-eQ-NjA" firstAttribute="leading" secondItem="B67-zo-Rhk" secondAttribute="leading" id="vvx-N5-cyH"/>
                                         <constraint firstItem="eHp-xF-wJi" firstAttribute="trailing" secondItem="B67-zo-Rhk" secondAttribute="trailing" id="xog-Yp-32C"/>
                                         <constraint firstItem="Rv8-x1-bhw" firstAttribute="leading" secondItem="MrK-6x-488" secondAttribute="leading" constant="20" id="zzh-xD-4ye"/>
                                     </constraints>
@@ -165,6 +173,10 @@ Today's pick is silo's album</string>
                                         <outlet property="thumbnailImageView" destination="B67-zo-Rhk" id="GxD-gB-kOf"/>
                                     </connections>
                                 </collectionReusableView>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="BMV-cg-kCI"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="tOT-2c-8u5"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -173,15 +185,9 @@ Today's pick is silo's album</string>
                             <constraint firstItem="aof-C8-7Fq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="3Hr-SO-VWy"/>
                             <constraint firstItem="aof-C8-7Fq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="AuG-JF-e6E"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="aof-C8-7Fq" secondAttribute="bottom" id="Fvl-0V-lkg"/>
-                            <constraint firstItem="aof-C8-7Fq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="N4P-KW-rNC"/>
-                            <constraint firstAttribute="trailing" secondItem="aof-C8-7Fq" secondAttribute="trailing" id="QJi-F6-9EA"/>
-                            <constraint firstItem="aof-C8-7Fq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lsH-c3-cYl"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aof-C8-7Fq" secondAttribute="trailing" id="zIg-KJ-fqy"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="collectionView" destination="aof-C8-7Fq" id="YcE-nU-Eom"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
