--- a/SimpleApp/DiceGame/DiceGame/Base.lproj/Main.storyboard
+++ b/SimpleApp/DiceGame/DiceGame/Base.lproj/Main.storyboard
@@ -27,13 +27,13 @@
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="4xy-Br-17O">
                                 <rect key="frame" x="20" y="310" width="374" height="179.5"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cWI-YQ-UzI">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="black1" translatesAutoresizingMaskIntoConstraints="NO" id="cWI-YQ-UzI">
                                         <rect key="frame" x="0.0" y="0.0" width="179.5" height="179.5"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="cWI-YQ-UzI" secondAttribute="height" multiplier="1:1" id="pp8-Ow-FK3"/>
                                         </constraints>
                                     </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ynA-ML-3Uq">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="black1" translatesAutoresizingMaskIntoConstraints="NO" id="ynA-ML-3Uq">
                                         <rect key="frame" x="194.5" y="0.0" width="179.5" height="179.5"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="ynA-ML-3Uq" secondAttribute="height" multiplier="1:1" id="ywv-Pa-msr"/>
@@ -52,6 +52,9 @@
                                 <state key="normal" title="ROLL">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="rollBtnTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="f2O-wd-ViE"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -67,6 +70,10 @@
                             <constraint firstItem="4xy-Br-17O" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xcq-BE-VsF"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="leftDice" destination="cWI-YQ-UzI" id="2AL-8H-hHu"/>
+                        <outlet property="rightDice" destination="ynA-ML-3Uq" id="3qC-41-E5d"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -74,6 +81,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="black1" width="399" height="399"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
