--- a/SimpleApp/RPSGame/RPSGame/Base.lproj/Main.storyboard
+++ b/SimpleApp/RPSGame/RPSGame/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CHOOSE!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w4x-rA-da0">
-                                <rect key="frame" x="153.5" y="154.5" width="107.5" height="40"/>
+                                <rect key="frame" x="153.5" y="214.5" width="107.5" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="lgs-Th-U5D"/>
                                 </constraints>
@@ -27,7 +27,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="2n0-1s-RJf">
-                                <rect key="frame" x="20" y="253.5" width="374" height="269.5"/>
+                                <rect key="frame" x="20" y="313.5" width="374" height="269.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="CKh-Yd-xfZ">
                                         <rect key="frame" x="0.0" y="0.0" width="179.5" height="269.5"/>
@@ -90,7 +90,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="53" translatesAutoresizingMaskIntoConstraints="NO" id="m8U-Ok-lmI">
-                                <rect key="frame" x="20" y="661" width="374" height="30"/>
+                                <rect key="frame" x="20" y="721" width="374" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3f7-TF-RkW">
                                         <rect key="frame" x="0.0" y="0.0" width="160.5" height="30"/>
@@ -117,7 +117,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="CCQ-OF-W0P">
-                                <rect key="frame" x="20" y="543" width="374" height="98"/>
+                                <rect key="frame" x="20" y="603" width="374" height="98"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="012-ax-HpG">
                                         <rect key="frame" x="0.0" y="0.0" width="98" height="98"/>
@@ -177,7 +177,7 @@
                             <constraint firstItem="w4x-rA-da0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kg3-aA-4Ti"/>
                             <constraint firstItem="2n0-1s-RJf" firstAttribute="top" secondItem="w4x-rA-da0" secondAttribute="bottom" constant="59" id="let-g2-gch"/>
                             <constraint firstItem="CCQ-OF-W0P" firstAttribute="trailing" secondItem="2n0-1s-RJf" secondAttribute="trailing" id="sgO-9W-r0J"/>
-                            <constraint firstItem="2n0-1s-RJf" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-60" id="ufg-OL-aqh"/>
+                            <constraint firstItem="2n0-1s-RJf" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ufg-OL-aqh"/>
                         </constraints>
                     </view>
                     <connections>
